--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./images/donut.png" alt="donut" class="donut">
         </figure>
         <article class="data">
-            <p>BREVE NOS CINEMAS:</p>
+            <p>EM BREVE NOS CINEMAS:</p>
             <p>30 de janeiro/2023</p>
         </article>
     </section>
